@@ -23,7 +23,7 @@ use Log::Log4perl;
 use lib qw(/usr/local/pf/lib);
 
 use pf::node qw(node_view);
-use pf::violation qw(violation_count_trap);
+use pf::violation qw(violation_count_trap violation_exist_open);
 use pf::SwitchFactory;
 use threads;
 
@@ -37,11 +37,19 @@ sub vlan_determine_for_node {
     my $correctVlanForThisMAC;
     my $open_violation_count = violation_count_trap($mac);
     if ($open_violation_count > 0) {
-        $logger->info("$mac has $open_violation_count open violations(s) with action=trap; belongs into isolation VLAN.");
-        my $switchFactory = new pf::SwitchFactory( -configFile => '/usr/local/pf/conf/switches.conf');
-        my $switch = $switchFactory->instantiate($switch_ip);
-        $correctVlanForThisMAC = $switch->{_isolationVlan};
+        if (($open_violation_count == 1) && (violation_exist_open($mac,1200001)) {
+            $logger->info("$mac has scan reg violation open; belongs into registration VLAN.");
+            my $switchFactory = new pf::SwitchFactory( -configFile => '/usr/local/pf/conf/switches.conf');
+            my $switch = $switchFactory->instantiate($switch_ip);
+            $correctVlanForThisMAC = $switch->{_registrationVlan};
+        } else {
+            $logger->info("$mac has $open_violation_count open violations(s) with action=trap; belongs into isolation VLAN.");
+            my $switchFactory = new pf::SwitchFactory( -configFile => '/usr/local/pf/conf/switches.conf');
+            my $switch = $switchFactory->instantiate($switch_ip);
+            $correctVlanForThisMAC = $switch->{_isolationVlan};
+       }
     } else {
+        
         my $node_info = node_view($mac);
         if ((! defined($node_info)) || ($node_info->{'status'} ne 'reg')) {
             $logger->info("MAC: $mac is unregistered; belongs into registration VLAN");
