@@ -68,6 +68,8 @@
           (http://www.packetfence.org/mantis/view.php?id=404)
         skip registration
           (http://www.packetfence.org/mantis/view.php?id=408)
+        reg scan and VLAN isolation
+          (http://www.packetfence.org/mantis/view.php?id=408)
 
 1.7.3
         not all port security traps are handled
